k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shw
  name: shw
spec:
  selector:
    matchLabels:
      app: shw
  template:
    metadata:
      labels:
        app: shw
    spec:
      containers:
      - image: ghcr.io/astral-sh/uv:debian
        command:
          - uv
          - run
          - --with
          - git+https://github.com/alexpdp7/selfhostwatch.git[pg]
          - django-admin
          - runserver
          - "0.0.0.0:8000"
        imagePullPolicy: Always
        name: shw-runserver
        ports:
        - containerPort: 8000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shw
  name: shw
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: shw
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shw
spec:
  rules:
  - host: invalid.example.com
    http:
      paths:
      - backend:
          service:
            name: shw
            port:
              number: 8000
        path: /
        pathType: Prefix
